--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -27,8 +27,20 @@
   height: 20px;
   width: 20px;
   border: none;
+  color: black;
+  background-color: transparent;
 }
-
+.modal__close-grey {
+  position: absolute;
+  background-image: url(../../assets/closeBtnGrey.svg);
+  height: 16px;
+  width: 16px;
+  top: 20px;
+  right: 28px;
+  border: none;
+  color: #000000;
+  background-color: transparent;
+}
 .modal__submit {
   border: none;
   width: 124px;
@@ -120,18 +132,32 @@
 }
 
 .modal__caption {
-  margin-bottom: 20px;
-  padding: 20px;
-}
-
-.modal__close {
-  color: black;
+  margin: 0px;
+  padding: 0px;
 }
 
 .modal__weather {
-  padding: 20px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .modal__footer {
   margin: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 24px 32px 32px 32px;
+}
+
+.modal__footer-column {
+  flex-direction: column;
+  display: flex;
+  gap: 12px;
+}
+.modal__delete-button {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ff4d00;
+  border: none;
+  background: transparent;
 }
