--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -7,3 +7,33 @@
 .sidebar__username {
   margin: 0;
 }
+
+.sidebar__avatar {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+}
+
+.sidebar__logout-button {
+  height: 25px;
+  width: 65px;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  color: #000; /* This will make it red to indicate it's a logout action */
+}
+
+.sidebar__logout-button:hover {
+  opacity: 0.6;
+}
+
+.profile__edit-button {
+  height: 25px;
+  width: 65px;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  color: #000;
+}
