--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -56,3 +56,75 @@
   text-decoration: none;
   color: #000;
 }
+
+.header__auth-buttons {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.header__button {
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 8px 20px;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.header__button:hover {
+  opacity: 0.6;
+  transition: 0.3s;
+}
+
+.header__button_type_login {
+  color: #000000;
+  background: transparent;
+}
+
+.header__button_type_login:hover {
+  opacity: 0.6;
+}
+
+.header__button_type_signup {
+  /* Styles specific to signup button */
+  background: transparent;
+  color: #000000;
+  border-radius: 4px;
+}
+
+.header__avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.header__avatar-placeholder {
+  background-color: #000; /* or any color you prefer */
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.header__button_type_logout {
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 8px 20px;
+  cursor: pointer;
+  background: transparent;
+  color: #000000;
+  border: 1px solid #000000; /* Adding a border to distinguish it */
+  border-radius: 4px;
+  transition: 0.3s;
+}
+
+.header__button_type_logout:hover {
+  opacity: 0.6;
+  background: rgba(0, 0, 0, 0.05); /* Subtle background on hover */
+}
