--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -52,7 +52,7 @@
   left: 500px;
   font-weight: 700;
   line-height: 20px;
-  margin-top: 32px;
+  /* margin-top: 32px; */
   border-radius: 5px;
 }
 
@@ -179,4 +179,47 @@
   width: 100%;
   border-radius: 10px;
   margin: auto;
+}
+
+.modal__button-container {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.modal__submit,
+.modal__button {
+  width: 124px; /* Making both buttons the same width */
+  height: 36px; /* Making both buttons the same height */
+  border: none;
+  border-radius: 5px;
+  font-weight: 700;
+  line-height: 20px;
+  transition: background-color 0.2s ease, color 0.2s ease;
+  cursor: pointer; /* Shows hand cursor on hover */
+  padding: 0;
+}
+
+.modal__submit {
+  background-color: lightgray;
+  color: white;
+}
+
+.modal__submit:hover {
+  background-color: #4b4b4b; /* darker shade for primary button */
+  transform: scale(1.02);
+}
+
+.modal__button:hover {
+  background-color: #f5f5f5; /* lighter shade for secondary button */
+  transform: scale(1.02);
+}
+
+.modal__submit:hover,
+.modal__button:hover {
+  background-color: black;
+  color: white;
+  transform: scale(1.02); /* Slight grow effect */
 }
