--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -29,7 +29,7 @@
 .header__add-clothes-btn {
   background: none;
   border: none;
-
+  cursor: pointer;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
