--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -7,8 +7,6 @@
 }
 
 .card__name {
-  position: absolute;
-  top: 15px;
   margin: 0;
   background-color: white;
   text-align: center;
@@ -17,6 +15,16 @@
   font-size: 16px;
   color: rgba(0, 0, 0, 0.6);
   border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.card__container {
+  position: absolute;
+  top: 15px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .card__image {
@@ -24,18 +32,26 @@
   border-radius: 8%;
   height: 100%;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .card__like-button {
-  background: transparent;
-  border: 1px solid black;
-  cursor: pointer;
-  padding: 8px 16px;
-  margin-top: 8px;
+  background: none;
+  border: none;
+  padding: 0px;
   transition: background-color 0.3s ease;
+  cursor: pointer;
+  color: #ccc;
+  background-image: url(../../assets/hallowLikebutton.svg);
+  background-repeat: no-repeat;
+  width: 18px;
+  height: 15px;
+  background-size: 18px 15px;
 }
 
 .card__like-button_active {
-  background: black;
-  color: white;
+  color: black;
+  width: 18px;
+  height: 15px;
+  background-image: url(../../assets/fullLikebutton.svg);
 }
